--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,8 @@ dependencies {
     annotationProcessor ('org.projectlombok:lombok:1.18.16')
 
     // DB
-    runtimeOnly ('mysql:mysql-connector-java') //mysql8
-    //runtimeOnly 'mysql:mysql-connector-java:5.1.47' //mysql5
+    runtimeOnly 'mysql:mysql-connector-java:5.1.47'
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa') //mysql 5버전의 경우 삭제.
-
 
 
     // Web
